# TikTok_Playwright_Video_Watcher

./: .gitignore  README.md  pyproject.toml
src/: main.py  settings.py  viewer.py
