[project]
name = "tiktok-playwright-video-watcher"
version = "0.1.0"
description = ""
authors = [
    {name = "FunkyDrama",email = "cripswhigga18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright (>=1.52.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
